Fixing crop spacing

--- a/creativecloud/features/interactive-components/crop/crop.css
+++ b/creativecloud/features/interactive-components/crop/crop.css
@@ -22,7 +22,7 @@
     min-width: 145px;
     gap: 16px;
     margin: auto;
-    padding: 6px;
+    padding: 5px;
     padding-right: 13px;
   }
 
